--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 	<img class="shuttle" src="img/shuttle.svg" alt"">
 </section>
 
+<section class="ship-section"> 
+	<ul class="ships">
+		<li><img src="img/ship-1.svg"alt""></li>
+		<li><img src="img/ship-2.svg"alt""></li>
+		<li><img src="img/ship-3.svg"alt""></li>
+		<li><img src="img/ship-4.svg"alt""></li>
+	</ul>
+</section>
+
 
 <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/waypoints.min.js"></script>
