--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <section class="ship-section"> 
 	<ul class="ships">
-		<li><img src="img/ship-1.svg"alt""></li>
+		<li><img class="img1" src="img/ship-1.svg"alt""></li>
 		<li><img src="img/ship-2.svg"alt""></li>
 		<li><img src="img/ship-3.svg"alt""></li>
 		<li><img src="img/ship-4.svg"alt""></li>
